fix: scss 사용 설정 및 다크모드 시 배경색 변경

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -108,3 +108,11 @@
   border-width: 5px 5px 0 5px;
   border-color: #999 transparent transparent transparent;
 }
+
+// 다크 모드인 경우
+@media (prefers-color-scheme: dark) {
+	.container {
+		background-color: #1e1f21 !important;
+		color: #fff !important;
+	}
+}
